Add order and popularity to people api
